--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "minesweeper",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "homepage": "https://rambo37.github.io/minesweeper/",
   "dependencies": {
     "react": "^18.2.0",
@@ -14,24 +15,6 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.3",
